[package]
name = "rust-gymnasium"
version = "0.1.0"
edition = "2024"
description = "A lightweight Rust port of OpenAI Gymnasium: environments, spaces, wrappers, and vectorized APIs for RL"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rl", "gym", "env"]

[dependencies]
thiserror = "1"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"
image = { version = "0.25", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
ndarray = { version = "0.15", optional = true }
nalgebra = { version = "0.32", optional = true }

[dev-dependencies]
minifb = "0.25"
proptest = "1"

[features]
default = ["std"]
std = []
image = ["dep:image"]
serde = ["dep:serde"]
ndarray = ["dep:ndarray"]
nalgebra = ["dep:nalgebra"]
